...
    @IBOutlet private weak var imageView: UIImageView!
    
    
    // MARK: -  Lifecycle
    override func viewDidLoad() {
        super.viewDidLoad()
        backwardButton.accessibilityIdentifier = "BackwardButton"
        
        loadImage()
        setupImageAndScrollView()
    }
    
    // MARK: - Actions
...
