...
        
        return unsplashLogoView
    }()
    
    private lazy var loginButton: UIButton = {
        let loginButton = UIButton(type: .system)
        loginButton.accessibilityIdentifier = "LoginButton"
        loginButton.setTitle("Войти", for: .normal)
        loginButton.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: .bold)
        loginButton.tintColor = .ypBlack
        loginButton.backgroundColor = .ypWhite
        loginButton.addTarget(self, action: #selector(didLoginButtonTapped), for: .touchUpInside)
        loginButton.layer.cornerRadius = 16
...
